build/log/idf_py_stderr_output_16649
Command: make -j 14 all
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:63:1: warning: missing initializer for member 'camera_config_t::sccb_i2c_port' [-Wmissing-field-initializers]
   63 | };
      | ^
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:142:22: error: redefinition of 'const tflite::Model* {anonymous}::model'
  142 | const tflite::Model* model = nullptr;
      |                      ^~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:66:22: note: 'const tflite::Model* {anonymous}::model' previously defined here
   66 | const tflite::Model* model = nullptr;
      |                      ^~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:143:27: error: redefinition of 'tflite::MicroInterpreter* {anonymous}::interpreter'
  143 | tflite::MicroInterpreter* interpreter = nullptr;
      |                           ^~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:67:27: note: 'tflite::MicroInterpreter* {anonymous}::interpreter' previously defined here
   67 | tflite::MicroInterpreter* interpreter = nullptr;
      |                           ^~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:144:15: error: redefinition of 'TfLiteTensor* {anonymous}::input'
  144 | TfLiteTensor* input = nullptr;
      |               ^~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:68:15: note: 'TfLiteTensor* {anonymous}::input' previously defined here
   68 | TfLiteTensor* input = nullptr;
      |               ^~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:145:15: error: redefinition of 'constexpr const int {anonymous}::kTensorArenaSize'
  145 | constexpr int kTensorArenaSize = 73 * 1024;
      |               ^~~~~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:69:15: note: 'constexpr const int {anonymous}::kTensorArenaSize' previously defined here
   69 | constexpr int kTensorArenaSize = 73 * 1024;
      |               ^~~~~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:146:9: error: redefinition of 'uint8_t {anonymous}::tensor_arena [74752]'
  146 | uint8_t tensor_arena[kTensorArenaSize];
      |         ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:70:9: note: 'uint8_t {anonymous}::tensor_arena [74752]' previously declared here
   70 | uint8_t tensor_arena[kTensorArenaSize];
      |         ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:149:6: error: redefinition of 'void setup_tflite()'
  149 | void setup_tflite() {
      |      ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:73:6: note: 'void setup_tflite()' previously defined here
   73 | void setup_tflite() {
      |      ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:180:17: error: redefinition of 'void app_main()'
  180 | extern "C" void app_main(void)
      |                 ^~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:104:17: note: 'void app_main()' previously defined here
  104 | extern "C" void app_main(void)
      |                 ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/beemonitor.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6192: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
